# clickhouse-analyzer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  example_output.txt
.github/workflows/: ci.yml  codegen-update.yml  corpus-coverage.yml  release-vscode.yml
benches/: parse_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs
src/: lib.rs
src/analysis/: cursor_context.rs  mod.rs  scope.rs
src/analyzer/: analyzer.rs
src/connection/: client.rs
src/diagnostics/: bracket_matching.rs  context.rs  mod.rs  types.rs
src/formatter/: context.rs  format_node.rs  mod.rs
src/lexer/: token.rs  tokenizer.rs
src/lsp/: completion.rs  document_symbols.rs  goto_definition.rs  hover.rs  line_index.rs  mod.rs  semantic_tokens.rs  signature_help.rs
src/metadata/: cache.rs  generated.rs  mod.rs  types.rs
src/parser/: diagnostic.rs  event.rs  interval_unit.rs  keyword.rs  marker.rs  mod.rs  parser.rs  syntax_kind.rs  syntax_tree.rs  token_set.rs  tree.rs
src/parser/grammar/: alter.rs  common.rs  create_table.rs  delete.rs  expressions.rs  insert.rs  mod.rs  select.rs  show.rs  statements.rs  types.rs
src/parser/parsers/: column_type.rs  expression.rs  mod.rs  select.rs
test/inputs/select/: error.sql  two_selects.sql
test/snapshots/: select__error.sql@parse.snap  select__two_selects.sql@parse.snap
tests/: corpus.rs  formatter.rs  integration.rs  properties.proptest-regressions  properties.rs
