[package]
name = "clickhouse-analyzer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }
rstest = "0.26"
