[package]
name = "clickhouse-analyzer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook", "serde"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
wasm-bindgen = { version = "0.2.100", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[[bin]]
name = "clickhouse-analyzer"
path = "src/bin/clickhouse-analyzer.rs"

[profile.release]
lto = true

[dev-dependencies]
expect-test = "1"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse_bench"
harness = false
