[package]
name = "clickhouse-analyzer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook", "serde"]
serde = ["dep:serde", "dep:serde_json"]
lsp = ["dep:tower-lsp", "dep:tokio", "dep:phf", "dep:reqwest", "serde"]
codegen = ["dep:reqwest", "dep:tokio", "serde"]

[dependencies]
wasm-bindgen = { version = "0.2.100", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"], optional = true }
phf = { version = "0.11", features = ["macros"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }

[[bin]]
name = "clickhouse-analyzer"
path = "src/bin/clickhouse-analyzer.rs"

[[bin]]
name = "clickhouse-lsp"
path = "src/bin/clickhouse-lsp.rs"
required-features = ["lsp"]

[[bin]]
name = "codegen"
path = "src/bin/codegen.rs"
required-features = ["codegen"]

[profile.release]
lto = true

[dev-dependencies]
expect-test = "1"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
walkdir = "2.5.0"

[[bench]]
name = "parse_bench"
harness = false
